--- a/Students_Management_Api.csproj
+++ b/Students_Management_Api.csproj
@@ -10,6 +10,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove=".filenesting.json" />
+    <Content Remove="appsetting.Production.json" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Autofac.Extras.Moq" Version="6.1.1" />
     <PackageReference Include="AutoMapper" Version="12.0.1" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
@@ -42,5 +47,7 @@
     <Folder Include="Migrations\" />
     <Folder Include="Services\TeacherMessageServices\" />
   </ItemGroup>
+
+  <ProjectExtensions><VisualStudio><UserProperties /></VisualStudio></ProjectExtensions>
 
 </Project>
